<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_addActivity"
            android:icon="@drawable/ic_add"
            android:title="@string/menu_add_activity" />
        <item
            android:id="@+id/nav_myActivities"
            android:icon="@drawable/ic_activities"
            android:title="@string/menu_my_activities" />
        <item
            android:id="@+id/nav_logOut"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>