<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_logOut"
        android:name="com.example.workoutplanner.ui.logOut.LogOutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_log_out" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.workoutplanner.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.workoutplanner.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_addActivity"
        android:name="com.example.workoutplanner.ui.addActivity.AddActivityFragment"
        android:label="@string/menu_add_activity"
        tools:layout="@layout/fragment_add_activity" />

    <fragment
        android:id="@+id/nav_myActivities"
        android:name="com.example.workoutplanner.ui.myActivities.MyActivitiesFragment"
        android:label="@string/menu_my_activities"
        tools:layout="@layout/fragment_my_activities" />
</navigation>